--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Protest+Strike&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
 :root {
-  --background: hsl(0, 0%, 99%);
+  --background: hsl(0, 0%, 100%);
   --foreground: hsl(240, 10%, 3.9%);
   --card: hsl(0, 0%, 100%);
   --card-foreground: hsl(240, 10%, 3.9%);
@@ -88,8 +89,20 @@ body {
   color: var(--foreground);
   border-color: var(--border);
   accent-color: var(--accent);
+
+  font-family: "Roboto", sans-serif;
+  overflow: hidden;
 }
 
 .border {
   border-color: var(--border);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: transparent !important;
+}
+
+input:-webkit-autofill:focus {
+  -webkit-text-fill-color: var(--foreground) !important;
 }
